[gd_scene load_steps=3 format=3 uid="uid://jjnn5vrffs6d"]

[ext_resource type="FontFile" uid="uid://deenv0j1hdu6s" path="res://assets/Font/Planes_ValMore.ttf" id="1_ahhtf"]
[ext_resource type="Script" uid="uid://bdgr6cbv33rg6" path="res://scenes/hud.gd" id="1_oo0fn"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_oo0fn")

[node name="LifeLabel" type="Label" parent="."]
offset_right = 152.0
offset_bottom = 40.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 3
theme_override_fonts/font = ExtResource("1_ahhtf")
theme_override_font_sizes/font_size = 40
text = "Vidas: 1"

[node name="ScoreLabel" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -99.0
offset_right = 99.0
offset_bottom = 40.0
grow_horizontal = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 3
theme_override_fonts/font = ExtResource("1_ahhtf")
theme_override_font_sizes/font_size = 40
text = "Puntaje: 0"
horizontal_alignment = 1

[node name="Message" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -240.0
offset_top = -114.5
offset_right = 240.0
offset_bottom = 114.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 3
theme_override_fonts/font = ExtResource("1_ahhtf")
theme_override_font_sizes/font_size = 50
text = "Comenzando..."
horizontal_alignment = 1
vertical_alignment = 2
autowrap_mode = 2

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0

[connection signal="timeout" from="MessageTimer" to="." method="_on_message_timer_timeout"]
